ncareer/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ncareer
  namespace: ncareer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ncareer
  template:
    metadata:
      labels:
        app: ncareer
    spec:
      containers:
        - name: ncareer
          image: leosunghojung/ncareer:a439eeb
          ports:
            - containerPort: 8080
